--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,62 @@
-version: '3'
+version: '3.8'
+
 services:
   postgres:
-    image: postgres:13
+    image: postgres:15
+    container_name: bw_postgres
     environment:
-      POSTGRES_PASSWORD: postgres
+      POSTGRES_USER: bw_user
+      POSTGRES_PASSWORD: bw_pass
+      POSTGRES_DB: bw_lab
+    ports:
+      - "5432:5432"
     volumes:
       - ./postgres/init.sql:/docker-entrypoint-initdb.d/init.sql
+    restart: unless-stopped
+
   airflow:
-    image: apache/airflow:2.7.0
+    image: apache/airflow:2.7.1-python3.10
+    container_name: bw_airflow
+    depends_on:
+      - postgres
+    environment:
+      AIRFLOW__CORE__EXECUTOR: SequentialExecutor
+      AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://bw_user:bw_pass@postgres:5432/bw_lab
+      AIRFLOW__CORE__FERNET_KEY: 'fernet_key_here'
+      AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION: 'false'
+      AIRFLOW__CORE__LOAD_EXAMPLES: 'false'
+    volumes:
+      - ./airflow/dags:/opt/airflow/dags
+    ports:
+      - "8080:8080"
+    command: >
+      bash -c "
+      airflow db migrate &&
+      airflow users create --username admin --password admin --firstname Air --lastname Flow --role Admin --email admin@example.com &&
+      airflow webserver & airflow scheduler"
+    restart: unless-stopped
+
   metabase:
     image: metabase/metabase
+    container_name: bw_metabase
+    ports:
+      - "3000:3000"
+    environment:
+      MB_DB_FILE: /metabase-data/metabase.db
+    volumes:
+      - metabase_data:/metabase-data
+    restart: unless-stopped
+
+  dbt:
+    image: ghcr.io/dbt-labs/dbt-postgres:1.7.5
+    container_name: bw_dbt
+    volumes:
+      - ./dbt:/usr/app
+    working_dir: /usr/app
+    depends_on:
+      - postgres
+    entrypoint: ["tail", "-f", "/dev/null"]  # Keeps the container running for exec
+    restart: unless-stopped
+
+volumes:
+  metabase_data:
