--- a/dbt/bw_project/dbt_project.yml
+++ b/dbt/bw_project/dbt_project.yml
@@ -2,6 +2,8 @@ name: 'bw_project'
 version: '1.0'
 config-version: 2
 
-profile: 'default'
+profile: 'bw_project'
 
-source-paths: ["models"]
+models:
+  bw_project:
+    +materialized: view
