multi schema expansion

--- a/dbt/bw_project/dbt_project.yml
+++ b/dbt/bw_project/dbt_project.yml
@@ -6,4 +6,9 @@ profile: 'bw_project'
 
 models:
   bw_project:
-    +materialized: view
+    staging:
+      +schema: staging
+      +materialized: view
+    reporting:
+      +schema: reporting
+      +materialized: view
