--- a/dbt/profiles.yml
+++ b/dbt/profiles.yml
@@ -8,4 +8,5 @@ bw_project:
       password: bw_pass
       port: 5432
       dbname: bw_lab
-      schema: public
+      schema: lab  # overridden per model
+      
